# Projection_plane

./: .gitignore  6DOF_IMPLEMENTATION_COMPLETE.md  CLEANUP_SUMMARY.md  FINAL_2.5D_6DOF_DESIGN.md  LICENSE  PHASE2_IMPLEMENTATION_REPORT.md  POSE_COMPARISON_GUIDE.md  PROJECTION_PLANE_GUIDE.md  README.md  README_COMPLETE.md  ROS_IMPLEMENTATION_READY.md  VERIFICATION_REPORT.md  benchmark_projection.py  ddd.usda  detections_6dof_log.csv  random_plane_publisher.sh  validate_6dof_csv.py
src/projection_msgs/: CMakeLists.txt  package.xml
src/projection_msgs/msg/: ProjectionContract.msg
src/projection_plane/: CMakeLists.txt  package.xml  requirements.txt  setup.cfg  setup.py  test_projection.sh
src/projection_plane/config/: projection_params.yaml
src/projection_plane/include/projection_plane/: projection_math.hpp  rasterizer.hpp
src/projection_plane/launch/: projection.launch.py  projection_plane.launch.py
src/projection_plane/projection_plane/: core.py  projection_node.py
src/projection_plane/src/: projection_plane_node.cpp
src/projection_sam3/: package.xml  setup.cfg  setup.py
src/projection_sam3/launch/: box_6dof.launch.py  detections_3d_converter.launch.py  detections_6dof_converter.launch.py  projection_sam3.launch.py
src/projection_sam3/projection_sam3/: box_6dof_node.py  camera_model.py  depth_estimation.py  detections_3d_converter.py  detections_6dof_converter.py  geometry_utils.py  mask_analysis.py  node.py  test_6dof_node.py  track_manager.py  tracker_node.py
src/realtime_detect/: COMPLETION_SUMMARY.md  IMPLEMENTATION_TASKS.md  INDEX.md  README.md  RUNBOOK.md  package.xml  setup.cfg  setup.py
src/realtime_detect/launch/: apriltag_box_pose.launch.py
src/realtime_detect/realtime_detect/: apriltag_box_pose_node.py
