<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realtime_detect</name>
  <version>0.0.0</version>
  <description>AprilTag-based 6DOF box pose detection and tracking pipeline</description>
  <maintainer email="jack0682@github.com">jack</maintainer>
  <license>Apache-2.0</license>

  <!-- Build and runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>apriltag_msgs</depend>
  <depend>apriltag_ros</depend>
  <depend>cv_bridge</depend>
  <depend>python3-scipy</depend>
  <depend>python3-numpy</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
